I moved the form wrapper to a separate component and also fixed the padding from the Header component. Previously, this component caused overlap with part of the form content when the viewport width was less than 291px. The page template containing the form was also placed into a separate component. This component includes everything necessary for the page and accept form component as a prop. The 'WarningMessage' component has been renamed to 'WarningMessageForField' and moved from the 'form-input' directory to 'common/components' because it will be reused in various parts of the project, not just within the 'FormInput' component.

--- a/common/components/form-wrapper/form-wrapper.module.css
+++ b/common/components/form-wrapper/form-wrapper.module.css
@@ -1,4 +1,9 @@
-.formContainer {
+.wrapper {
+  margin: 0 auto;
+  padding-top: 5.75rem;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   padding: 0 5% 1.875rem;
@@ -10,7 +15,11 @@
 }
 
 @media (min-width: 600px) {
-  .formContainer {
+  .wrapper {
+    max-width: 28.125rem;
+  }
+
+  .container {
     padding: 3rem 4.25rem;
   }
 }
